--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
+    "react-animated-heart": "^0.0.8",
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
