--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-alpha.78",
     "@mui/material": "^5.12.3",
     "@react-spring/web": "^9.7.2",
     "@reduxjs/toolkit": "^1.9.5",
