--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.78",
     "@mui/material": "^5.12.3",
     "@react-spring/web": "^9.7.2",
@@ -12,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "browser-image-compression": "^2.0.2",
     "react": "^18.2.0",
     "react-animated-heart": "^0.0.8",
     "react-calendar": "^4.2.1",
