--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "front",
+  "homepage": "https://kvarutar.github.io/Geckon/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "react-slugify": "^3.0.2",
+    "react-uploader": "^3.37.0",
     "react-use-websocket": "^4.3.1",
     "sass": "^1.62.1",
     "sockjs-client": "^1.6.1",
